<resources>
    <string name="app_name">lab3</string>
    <string name="hello_world_button">hello world text!</string>
    <string name="new_text">New text</string>
    <string name="another_button">another button</string>
    <string name="hello_world_message">Hello world!</string>

    <string name="apply">Apply</string>
    <string name="hello">Hello %1$s</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="launch_second_screen">Launch Second Screen</string>
    <string name="this_is_a_second_activity">This is a second activity</string>
    <string name="save_settings">Save settings</string>
    <string name="settings">Settings</string>
    <string name="yedomakha_ilya_word_game">Yedomakha Ilya\nWord game</string>
    <string name="play">Play</string>
    <string name="difficulty_settings">Difficulty Settings</string>
    <string name="word_size">Word size:</string>
    <string name="normal_4_5_6">Normal(4,5,6)</string>
    <string name="hard_7_8_9">Hard(7,8,9)</string>
    <string name="timer">Timer:</string>
    <string name="easy_5_minutes">Easy(5 minutes)</string>
    <string name="normal_2_minutes">Normal(2 minutes)</string>
    <string name="hard_1_minutes">Hard(1 minutes)</string>
    <string name="blank_button">_</string>
    <string name="current_settings">Difficulty: %1$d\n Timer: %2$d</string>
</resources>